@@ -12,6 +12,8 @@ sed -i 's/name="entity_ds_database" value="moqui"/name="entity_ds_database" valu
 sed -i 's|name="default_time_zone" value=""|name="default_time_zone" value="'$TIME_ZONE'"|g' $CONF_FILE
 sed -i 's|name="database_time_zone" value=""|name="database_time_zone" value="'$TIME_ZONE'"|g' $CONF_FILE
 
+export JAVA_TOOL_OPTIONS="${JAVA_TOOL_OPTIONS:+$JAVA_TOOL_OPTIONS }--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+
 $SLEEP
 
 screen -dmS Moqui java $JAVA_OPTS -cp . MoquiStart port=8080 conf=$CONF_FILE
